--- a/src/PedeLogo.Catalogo.Api/appsettings.json
+++ b/src/PedeLogo.Catalogo.Api/appsettings.json
@@ -8,7 +8,10 @@
   },
   "AllowedHosts": "*",
   "Mongo": {
-    "ConnectionString": "mongodb://mongouser:mongopwd@localhost:27017/admin",
+    "Host": "localhost",
+    "User": "mongouser",
+    "Password": "mongopwd",
+    "Port":  "27017",
     "DataBase": "admin"
   }
 }
