--- a/src/PedeLogo.Catalogo.Api/appsettings.json
+++ b/src/PedeLogo.Catalogo.Api/appsettings.json
@@ -11,7 +11,27 @@
     "Host": "localhost",
     "User": "mongouser",
     "Password": "mongopwd",
-    "Port":  "27017",
+    "Port": "27017",
     "DataBase": "admin"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "System": "Information",
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://seq:5341/",
+          "compact": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   }
 }
