--- a/src/PedeLogo.Catalogo.Api/PedeLogo.Catalogo.Api.csproj
+++ b/src/PedeLogo.Catalogo.Api/PedeLogo.Catalogo.Api.csproj
@@ -1,20 +1,28 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
       <TargetFramework>netcoreapp3.1</TargetFramework>
       <UserSecretsId>9ba345b1-7ee7-4e12-99d5-925aed3bad75</UserSecretsId>
       <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
       <DockerfileContext>..\..</DockerfileContext>
+      <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.OpenApi" Version="1.2.3" />
       <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
-      <PackageReference Include="MongoDB.Bson" Version="2.11.1" />
-      <PackageReference Include="MongoDB.Driver" Version="2.11.1" />
-      <PackageReference Include="prometheus-net.AspNetCore" Version="3.6.0" />
-      <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+      <PackageReference Include="MongoDB.Bson" Version="2.11.6" />
+      <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="NLog.Web.AspNetCore" Version="4.10.0" />
+      <PackageReference Include="prometheus-net.AspNetCore" Version="4.1.1" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
 </Project>
